SERVER-35222 Make sure that SessionsCollectionConfigServer will shard config.system.sessions for the first time

(cherry picked from commit ce0602665adb7ec7d241dd77e585f7907e405e84)